@@ -162,7 +162,7 @@ indTri <- function(n, upper = TRUE) {
     if(n <= 2)
 	return(if(n == 2) as.integer(if(upper) n+1 else n) else integer(0))
     ## First, compute the 'diff(.)'  fast.  Use integers
-    one <- 1:1 ; two <- 2:2
+    one <- 1L ; two <- 2:2
     n1 <- n - one
     n2 <- n1 - one
     r <- rep.int(one, n*n1/two - one)
@@ -285,7 +285,7 @@ non0ind <- function(x, classDef.x = getClassDef(class(x)))
 	if(extends(cM, "TsparseMatrix"))
 	    return(unique(cbind(M@i,M@j)))
 	if(extends(cM, "pMatrix"))
-	    return(cbind(seq_len(nrow(M)), M@perm) - 1:1)
+	    return(cbind(seq_len(nrow(M)), M@perm) - 1L)
 	## else: C* or R*
 	isC <- extends(cM, "CsparseMatrix")
 	.Call(compressed_non_0_ij, M, isC)
@@ -298,7 +298,7 @@ non0ind <- function(x, classDef.x = getClassDef(class(x)))
     }
     else if(extends(classDef.x, "triangularMatrix")) { # check for "U" diag
 	if(x@diag == "U") {
-	    i <- seq_len(dim(x)[1]) - 1:1
+	    i <- seq_len(dim(x)[1]) - 1L
 	    rbind(non0.i(x, classDef.x), cbind(i,i))
 	} else non0.i(x, classDef.x)
     }
@@ -306,7 +306,7 @@ non0ind <- function(x, classDef.x = getClassDef(class(x)))
 	non0.i(x, classDef.x)
 }
 
-## nr= nrow: since  i in {0,1,.., nrow-1}  these are 1:1 "decimal" encodings:
+## nr= nrow: since  i in {0,1,.., nrow-1}  these are 1L "decimal" encodings:
 ## Further, these map to and from the usual "Fortran-indexing" (but 0-based)
 encodeInd  <- function(ij,  nr) ij[,1] + ij[,2] * nr
 encodeInd2 <- function(i,j, nr) i      +  j     * nr
@@ -509,6 +509,9 @@ tT2gT <- function(x, cl = class(x),
 	    j = c(x@j, if(uDiag) 0:(n-1)),
 	    x = c(x@x, if(uDiag) rep.int(1,n)))
 }
+
+## Fast very special one
+## .gT2tC <- function(x, uplo, diag) .Call(Tsparse_to_tCsparse, x, uplo, diag)
 
 gT2tT <- function(x, uplo, diag,
 		  cl = class(x),
@@ -723,10 +726,11 @@ as_geClass <- function(x, cl) {
 }
 
 as_CspClass <- function(x, cl) {
-    if (## diagonal is *not* sparse:
-	##(extends(cl, "diagonalMatrix") && isDiagonal(x)) ||
-	(extends(cl, "symmetricMatrix") && isSymmetric(x)) ||
-	(extends(cl, "triangularMatrix")&& isTriangular(x)))
+    ## NOTE: diagonal is *not* sparse:
+    ##(extends(cl, "diagonalMatrix") && isDiagonal(x)) ||
+    if (extends(cl, "symmetricMatrix") && isSymmetric(x))
+	as(x, cl)
+    else if (extends(cl, "triangularMatrix") && (iT <- isTriangular(x)))
 	as(x, cl)
     else if(is(x, "CsparseMatrix")) x
     else as(x, paste(.M.kind(x, cl), "gCMatrix", sep=''))
@@ -752,50 +756,79 @@ isTriMat <- function(object, upper = NA) {
     ## pretest: is it square?
     d <- dim(object)
     if(d[1] != d[2]) return(FALSE)
+    TRUE.U <- structure(TRUE, kind = "U")
+    if(d[1] == 0) return(TRUE.U)
     ## else slower test
+    TRUE.L <- structure(TRUE, kind = "L")
     if(!is.matrix(object))
 	object <- as(object,"matrix")
     if(is.na(upper)) {
 	if(all0(object[lower.tri(object)]))
-	    structure(TRUE, kind = "U")
+	    TRUE.U
 	else if(all0(object[upper.tri(object)]))
-	    structure(TRUE, kind = "L")
+	    TRUE.L
 	else FALSE
     } else if(upper)
-	all0(object[lower.tri(object)])
+	if(all0(object[lower.tri(object)])) TRUE.U else FALSE
     else ## upper is FALSE
-	all0(object[upper.tri(object)])
+	if(all0(object[upper.tri(object)])) TRUE.L else FALSE
+}
+
+## For Tsparse matrices:
+isTriT <- function(object, upper = NA) {
+    ## pretest: is it square?
+    d <- dim(object)
+    if(d[1] != d[2]) return(FALSE)
+    ## else
+    TRUE.U <- structure(TRUE, kind = "U")
+    if(d[1] == 0) return(TRUE.U)
+    TRUE.L <- structure(TRUE, kind = "L")
+    if(is.na(upper)) {
+	if(all(object@i <= object@j))
+	    TRUE.U
+	else if(all(object@i >= object@j))
+	    TRUE.L
+	else FALSE
+    } else if(upper) {
+	if(all(object@i <= object@j)) TRUE.U else FALSE
+    } else { ## 'lower'
+	if(all(object@i >= object@j)) TRUE.L else FALSE
+    }
 }
 
 ## For Csparse matrices
-isTriC <- function(x, upper = NA) {
+isTriC <- function(object, upper = NA) {
     ## pretest: is it square?
-    d <- dim(x)
+    d <- dim(object)
     if(d[1] != d[2]) return(FALSE)
     ## else
-    if(d[1] == 0) return(TRUE)
+    TRUE.U <- structure(TRUE, kind = "U")
+    if(d[1] == 0) return(TRUE.U)
+    TRUE.L <- structure(TRUE, kind = "L")
     ni <- 1:d[2]
     ## the row indices split according to column:
-    ilist <- split(x@i, factor(rep.int(ni, diff(x@p)), levels= ni))
+    ilist <- split(object@i, factor(rep.int(ni, diff(object@p)), levels= ni))
     lil <- unlist(lapply(ilist, length), use.names = FALSE)
     if(any(lil == 0)) {
 	pos <- lil > 0
 	if(!any(pos)) ## matrix of all 0's
-	    return(TRUE)
+	    return(TRUE.U)
 	ilist <- ilist[pos]
 	ni <- ni[pos]
     }
-    ni0 <- ni - 1:1 # '0-based ni'
+    ni0 <- ni - 1L # '0-based ni'
     if(is.na(upper)) {
 	if(all(sapply(ilist, max, USE.NAMES = FALSE) <= ni0))
-	    structure(TRUE, kind = "U")
+	    TRUE.U
 	else if(all(sapply(ilist, min, USE.NAMES = FALSE) >= ni0))
-	    structure(TRUE, kind = "L")
+	    TRUE.L
 	else FALSE
     } else if(upper) {
-	all(sapply(ilist, max, USE.NAMES = FALSE) <= ni0)
+	if(all(sapply(ilist, max, USE.NAMES = FALSE) <= ni0))
+	    TRUE.U else FALSE
     } else { ## 'lower'
-	all(sapply(ilist, min, USE.NAMES = FALSE) >= ni0)
+	if(all(sapply(ilist, min, USE.NAMES = FALSE) >= ni0))
+	    TRUE.L else FALSE
     }
 }
 
